k8s/traffic/40-virtualservice-fault.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: payment-api
  namespace: payments
spec:
  hosts:
    - "*"
  gateways:
    - payment-gateway
  http:
    - name: delay-test
      match:
        - headers:
            x-chaos:
              exact: delay
      fault:
        delay:
          percentage:
            value: 100
          fixedDelay: 3s
      route:
        - destination:
            host: payment-api
            subset: v1
            port:
              number: 8080
    - name: abort-test
      match:
        - headers:
            x-chaos:
              exact: abort
      fault:
        abort:
          percentage:
            value: 100
          httpStatus: 503
      route:
        - destination:
            host: payment-api
            subset: v1
            port:
              number: 8080
    - name: normal
      timeout: 3s
      route:
        - destination:
            host: payment-api
            subset: v1
            port:
              number: 8080
